@@ -1,3 +1,12 @@
+2013-01-03  Julie Parent  <jparent@chromium.org>
+
+        Add unit test for default builder for the dashboards.
+        https://bugs.webkit.org/show_bug.cgi?id=105972
+
+        Reviewed by Dirk Pranke.
+
+        * TestResultServer/static-dashboards/loader_unittests.js:
+
 2013-01-03  Tony Chang  <tony@chromium.org>
 
         Generate internal.settings from Settings.in
